# dumb-compressor

./: CMakeLists.txt  PROJECT.md  build.bat
Source/: PluginEditor.cpp  PluginEditor.h  PluginProcessor.cpp  PluginProcessor.h
